--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="section-card">
       <h3>Lighting</h3>
       <p>Stylish lamps and lights to brighten up your home beautifully.</p>
-      <a href="lighting.html">View Lighting</a>
+      <a href="https://lucky-bavarois-8fcfcc.netlify.app/">Go to Netlify Page</a>
     </div>
   </section>
 
